fix: spacing, alignments..

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,9 @@ li {
 h3 {
   font-size: 1.2rem !important;
 }
+.main {
+  min-height: 85vh;
+}
 
 footer {
   min-height: 60px;
